--- a/less/blocks/_services.less
+++ b/less/blocks/_services.less
@@ -45,7 +45,7 @@
     text-align: center;
 
     @media (min-width: 1200px) {
-        flex-basis: 120px;
+        flex-basis: 135px;
         margin-bottom: -12px;
     }
 
@@ -59,7 +59,7 @@
     }
 
     @media (min-width: 1200px) {
-        margin: 0 0 0 32px;
+        margin: 0 0 0 20px;
     }
 
 }
@@ -89,4 +89,8 @@
         text-align: unset;
     }
 
+}
+
+.grid-column {
+    margin-left: 74px;
 }
